tests/algorithms/x/Erlang/maths/geometric_mean.error
run: exit status 127
escript: exception error: "test4 failed"
  in function  main:test_compute_geometric_mean/0 (/workspace/mochi/tests/algorithms/x/Erlang/maths/geometric_mean.erl, line 193)
  in call from main:main/0 (/workspace/mochi/tests/algorithms/x/Erlang/maths/geometric_mean.erl, line 206)
  in call from main:main/1 (/workspace/mochi/tests/algorithms/x/Erlang/maths/geometric_mean.erl, line 214)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3